Fix modal on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,38 @@
 /* https://www.colorbox.io/#steps=12#hue_start=222#hue_end=205#hue_curve=easeInQuad#sat_start=26#sat_end=90#sat_curve=easeOutQuad#sat_rate=36#lum_start=100#lum_end=29#lum_curve=easeOutQuad#minor_steps_map=10,100 */
 
-.alert {
-  max-width: 700px;
+.alert-container {
+  top: 10vh;
+  left: 0;
+  right: 0;
   position: fixed;
-  width: 100vw;
-  left: 50%;
-  top: 50%;
-  margin-top: -100px;
-
-  overflow: hidden;
-  margin-left: -350px;
+  background: red;
   z-index: 1000;
-  flex: 1 1 100%;
-  /* margin-left: calc(45vw - 940px -25px - 75px); */
-  /* margin-right: 22vw; */
-  /* margin-right: 25px; */
-  width: calc(940px - 25px);
-  background: hsl(0, 0%, 50%, 100%);
-  -webkit-backdrop-filter: blur(5);
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  /* overflow: hidden; */
+}
 
+.alert-container > div {
+  /* width: 90vw; */
+}
+
+.open {
+  background: none;
+  /* max-width: 640px; */
+  height: auto;
+  margin-top: 6vw;
+}
+
+.alert {
+  width: 90vw;
+  /* margin: 0 auto; */
+  z-index: 1001;
+  max-width: 500px;
+  background: rgb(0, 0, 0);
+  -webkit-backdrop-filter: blur(5);
+  box-sizing: border-box;
   color: #fff;
   border-radius: 0.5em;
   text-align: left;
@@ -29,11 +43,24 @@
     0 11.3px 14.6px rgba(0, 0, 0, 0.016), 0 27px 35px rgba(0, 0, 0, 0.011);
 }
 
+.overlay {
+  z-index: 1;
+  position: fixed;
+  background: rgba(255, 255, 255, 0.7);
+  top: 0;
+  bottom: 0;
+  /* using the code below ensures overlay is always centered
+    no matter which post we click on */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+}
+
 .alert a,
 .alert a:visited {
-  color: #333;
-  font-weight: bold;
-  text-decoration: none;
+  color: #999;
+  /* font-weight: bold; */
+  /* text-decoration: none; */
 }
 
 .alert h3 {
@@ -43,24 +70,28 @@
   color: hsla(0, 0%, 100%, 70%);
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  font-size: 1.4em;
+  font-size: 1.2em;
   font-family: monospace;
 }
 .alert h2 {
-  font-size: 2em;
+  font-size: 1.3em;
+  font-weight: 600;
+  line-height: 1.4;
   margin: 0.1em 0 0.4em 0;
 }
 
 .alert p {
   margin: 0;
-  font-size: 1.2em;
-  line-height: 1.5;
-  margin-bottom: 0.25em;
+  font-size: 1em;
+  line-height: 1.4;
+  margin-top: 0.25em;
+  margin-bottom: 0.9em;
 }
 
 .alert button {
   border: 0;
-  background: #222;
+  background: #333;
+  border: 0.5px solid #000;
   color: #fff;
   font-size: 1.1em;
   font-family: monospace;
@@ -68,22 +99,8 @@
   display: inline;
   letter-spacing: 0.02em;
   border-radius: 5px;
-  padding: 0.5em;
-  box-shadow: 0 0.7px 3px rgba(0, 0, 0, 0.1), 0 1.8px 2.3px rgba(0, 0, 0, 0.029),
+  padding: 0.7em 0.9em;
+  box-shadow: 0 0.7px 3px rgba(0, 0, 0, 0.154), 0 1.8px 2.3px rgba(0, 0, 0, 0.029),
     0 3.4px 4.4px rgba(0, 0, 0, 0.014), 0 6px 7.8px rgba(0, 0, 0, 0.02),
     0 11.3px 14.6px rgba(0, 0, 0, 0.016), 0 27px 35px rgba(0, 0, 0, 0.011);
-}
-
-.overlay {
-  z-index: 1;
-  position: fixed;
-  background: rgba(255, 255, 255, 0.5);
-  /* background: hsla(0, 0%, 0%, 0.5); */
-  top: 0;
-  bottom: 0;
-  /* using the code below ensures overlay is always centered
-    no matter which post we click on */
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
 }
